@@ -1,15 +1,45 @@
 plugins {
     id 'java-library'
     id 'maven-publish'
+    id "org.javamodularity.moduleplugin" version "1.8.12"
 }
 
 group 'de.dasbabypixel.api'
-version '1.0.6'
+version '1.0.7'
 
-java {
-    toolchain.languageVersion.set(JavaLanguageVersion.of(8))
-    withSourcesJar()
-    withJavadocJar()
+sourceCompatibility = 8
+targetCompatibility = 8
+
+ext.moduleName = 'de.dasbabypixel.property'
+
+sourceSets {
+    moduleInfo {
+        java {
+            srcDir 'src/module-info/java'
+        }
+    }
+}
+
+compileModuleInfoJava {
+    sourceCompatibility = 9
+    targetCompatibility = 9
+
+    inputs.property("moduleName", moduleName)
+
+    doFirst {
+        classpath += sourceSets.main.compileClasspath
+
+        options.compilerArgs = [
+                '--module-path', classpath.asPath,
+                '--add-modules', 'ALL-SYSTEM',
+                '-d', sourceSets.main.output.classesDirs.asPath
+        ]
+    }
+}
+
+jar {
+    from sourceSets.main.output
+    from sourceSets.moduleInfo.output
 }
 
 publishing {
@@ -22,7 +52,7 @@ publishing {
         maven {
             name = 'DarkCube'
             credentials PasswordCredentials
-            url = 'https://dasbabypixel.ddnsfree.com/repository/darkcube/'
+            url = 'https://nexus.darkcube.com/repository/darkcube/'
         }
     }
 }
